--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@tailwindcss/oxide": "^4.1.11",
     "@tailwindcss/vite": "^4.1.11",
+    "firebase": "^12.0.0",
     "lightningcss": "^1.30.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
